--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -73,12 +73,16 @@ flutter:
   # list giving the asset and other descriptors for the font. For
   # example:
   fonts:
-    - family: Roboto
+    - family: Poppins
       fonts:
-        - asset: assets/fonts/Roboto/Roboto-Regular.ttf
-          weight: 200
-        - asset: assets/fonts/Roboto/Roboto-Bold.ttf
-          weight: 800
+        - asset: assets/fonts/Poppins/Poppins-Light.ttf
+          weight: 300
+        - asset: assets/fonts/Poppins/Poppins-Regular.ttf
+          weight: 400
+        - asset: assets/fonts/Poppins/Poppins-Medium.ttf
+          weight: 500
+        - asset: assets/fonts/Poppins/Poppins-Bold.ttf
+          weight: 700
           # style: italic
   #   - family: Trajan Pro
   #     fonts:
